--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "youtubegame",
+  "name": "telegram-bot",
   "version": "1.0.0",
-  "description": "game for telegram",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
-  "keywords": [
-    "js",
-    "telegram"
-  ],
-  "author": "Max Zhukov",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "node-telegram-bot-api": "^0.50.0",
-    "telegraf": "^3.38.0"
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "node-telegram-bot-api": "^0.59.0",
+    "nodemon": "^2.0.20"
   }
 }
